# multiplayer

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.fr.md  CODE_OF_CONDUCT.md  CONTRIBUTING.es.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Dockerfile  LICENSE.es.md  LICENSE.fr.md  LICENSE.md  README.es.md  README.fr.md  README.md  REFERENCE.es.md  REFERENCE.fr.md  REFERENCE.md  pyproject.toml
.github/: image-tags.yml
.github/workflows/: ci.yml  docker-build.yml  release.yml  synology-docker-build.yml  update-tags.yml
multiplayer/: __init__.py  client.py  exceptions.py  game.py  server.py  utils.py
multiplayer/data/: egyptian_gods.csv  european_kings.csv  european_queens.csv  greek_gods.csv  rivers.csv  seas_oceans.csv
scripts/: check_project.py  client_instance.py  full_test_env.py  multi_server_test.py  run_log_server.py
src/multiplayer/: __init__.py  client.py  exceptions.py  game.py  run_log_server.py  run_server.py  server.py  utils.py
src/multiplayer/IPClogging/: __init__.py  echoing.py  server.py  test.py
src/multiplayer/data/: __init__.py  cities.csv  countries.csv  planets_moons.csv  roman_gods.csv
src/multiplayer/language/: __init__.py  language.py
tests/: repro_origin_logs.py  test_admin.py  test_game.py  test_logging_config.py  test_metadata.py  test_network.py  test_observer.py  test_server_name.py  test_utils.py
translation/: CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.fr.md  CONTRIBUTING.es.md  CONTRIBUTING.fr.md  LICENSE.es.md  LICENSE.fr.md  README.es.md  README.fr.md  REFERENCE.es.md  REFERENCE.fr.md
