[project]
name = "multiplayer"
version = "0.5.5"
description = "Library that allows you to manage multiple players, locally, on a network, or on the Internet."
license-files = ["LICENSE.md"]
author = "devfred78"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "multiplayer"
module-root = ""
package-data = { "multiplayer" = ["data/*.csv"] }
