[project]
name = "multiplayer"
version = "0.10.5"
description = "Library that allows you to manage multiple players, locally, on a network, or on the Internet."
license = "MIT"
license-files = ["LICENSE.md"]
author = "devfred78"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "cryptography",
    "colorlog",
]

[project.scripts]
multiplayer-log-server = "multiplayer.run_log_server:main"
multiplayer-server = "multiplayer.run_server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "multiplayer"
module-root = "src"
package-data = { "multiplayer" = ["data/*.csv"] }
